# graphics-playground

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  flake.nix  imgui.ini
app/sandbox/: CMakeLists.txt
app/sandbox/shaders/: gradient.comp
app/sandbox/src/: main.cpp
apps/sandbox/: CMakeLists.txt  main.cpp
dependencies/: CMakeLists.txt
lib/: CMakeLists.txt  engine.cpp  engine.h
lib/goose/: CMakeLists.txt  goose.cpp  goose.hpp  honk.cpp
lib/goose/common/: assert.hpp  honk.cpp  honk.h  log.hpp  math.hpp  types.h  types.hpp  util.hpp
lib/goose/core/: types.h  types.hpp  util.hpp
lib/goose/graphics/: render.cpp  render.hpp
lib/goose/imgui/: imgui.cpp  imgui.hpp
lib/goose/render/: allocator.cpp  allocator.hpp  command.cpp  command.hpp  context.cpp  context.hpp  descriptor.cpp  descriptor.hpp  descriptors.cpp  descriptors.hpp  device.cpp  device.hpp  frame.cpp  frame.hpp  helpers.cpp  helpers.hpp  image.cpp  image.hpp  immediate.cpp  immediate.hpp  instance.cpp  instance.hpp  render.cpp  render.hpp  swapchain.cpp  swapchain.hpp  util.cpp  util.hpp
lib/goose/window/: window.cpp  window.hpp
src/: core.h  engine.cpp  engine.h  log.cpp  log.h  main.cpp  renderer.cpp  renderer.h  window.cpp  window.h
